samples/_failures_safe/1761616360_433afa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e4567034.c:168: error: expected ‘;’, ‘,’ or ‘)’ at end of input
